# web2ws

./: .gitignore  COMPLETION_CHECKLIST.md  COMPLETION_REPORT.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  README.md  README_jp.md  SPEC_COMPLIANCE.md  TESTING.md  demo.sh  spec.md
mds/: REQUIREMENTS.md  backlog.md  config_conventions.md
python/: README.md  receiver.py  requirements.txt
src/: common.rs  config.rs  lib.rs  main.rs  sender.rs  signaling_server.rs  viewer.rs  webcam.rs  websocket.rs
src/camera/: mod.rs
src/server/: mod.rs
src/websocket/: mod.rs
static/: app.js  index.html  sender.html  viewer.html
tests/: integration.rs  webcam_tests.rs  websocket_tests.rs
tests/integration/: test_server.rs
tests/unit/camera/: test_camera.rs  test_camera_params.rs
tests/unit/websocket/: test_websocket.rs
