[package]
name = "web2ws"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
parking_lot = "0.12"
dashmap = "5.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
bytes = "1.5"
image = "0.24"
crossbeam-channel = "0.5"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "sender"
path = "src/bin/sender.rs"

[[bin]]
name = "viewer"
path = "src/bin/viewer.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[lib]
name = "web2ws"
path = "src/lib.rs"
