[package]
name = "web2ws"
version = "0.1.0"
edition = "2021"

[dependencies]
# 非同期ランタイム
tokio = { version = "1.0", features = ["full"] }

# WebサーバーとWebSocket
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Webcam取得
nokhwa = "0.10"

# 画像処理
image = "0.24"

# シリアライゼーション
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# エラーハンドリング
anyhow = "1.0"
thiserror = "1.0"

# ログ
tracing = "0.1"
tracing-subscriber = "0.3"

# 非同期ユーティリティ
futures-util = "0.3"

[dev-dependencies]
# テスト用
tokio-test = "0.4"
tokio-tungstenite = "0.21"
futures-util = "0.3"
url = "2.5"
