[package]
name = "web2ws"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
nokhwa = { version = "0.10", features = ["input-v4l", "input-msmf", "input-avfoundation"] }
image = "0.24"
bytes = "1.0"
tokio-tungstenite = "0.20"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

[dev-dependencies]
tokio-test = "0.4"
